[#72] fix: 댓글 삭제 쿼리문 수정
